--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+##### Ths project is no longer maintained ####
+##### It is left here for refernce purposes ####
+
 This Project has been created to map the Bongo-Project store protocol to a more Ruby - Rails friendly file or gem I don't know.
 
 The Bongo Store Protocol Spec can be found here
